Todas as datas exibem os horários de oração
Além de agora ser possível ver os horários de oração de todos os dias
apartir da semana corrente, também identifico qual horário é de oração
ou apenas de referência, como por exemplo o meio dia ou a meia noite, o
nascer do sol ou por do sol.

Estou fazendo testes no estilo e modo de exibição

--- a/pray-times-calendar/pray-times-calendar.component.html
+++ b/pray-times-calendar/pray-times-calendar.component.html
@@ -5,13 +5,27 @@
     </FlexboxLayout>
 
     <GridLayout orientation="vertical" rows="*, auto" height="100%" width="100%" dock="left">
-        <RadCalendar #prayTimesCalendar height="100%" width="100%" [eventSource]="times"
-            [eventsViewMode]="eventsViewMode" [viewMode]="viewMode" [minDate]="minDate" selectionMode="Single"
-            [displayedDate]="displayedDate" [dateSelected]="onDateSelected">
+        <RadCalendar #prayTimesCalendar height="100%" width="100%" 
+        
+            [eventSource]="times"
+            
+            [eventsViewMode]="eventsViewMode" [viewMode]="viewMode" [minDate]="minDate" 
+            
+            selectionMode="Single"
+            
+            (dateSelected)="onDateSelected($event)"
+
+            [displayedDate]="displayedDate"
+            
+           >
         </RadCalendar>
-        <StackLayout row="2" dir="horizontal">
-            <Button text="hoje" (tap)="onTodayTap()"></Button>
-            <Button text="Novo Evento" (tap)="onNewEventTap()"></Button>
-        </StackLayout>
+        <StackLayout row="2" orientation="horizontal">
+            <FAB #prayTimesMenuToDay (tap)="onTodayTap()" icon="~/assets/images/pray-times/today.png"
+               [ngClass]="{ 'fab-button-today-active': active === 'today' }" rippleColor="#f1f1f1"
+               class="fab-button fab-button-today"></FAB>
+            <FAB #prayTimesMenuNew (tap)="onNewEventTap()" icon="~/assets/images/pray-times/new-event.png"
+               [ngClass]="{ 'fab-button-today-active': active === 'today' }" rippleColor="#f1f1f1"
+               class="fab-button fab-button-today"></FAB>
+         </StackLayout>
     </GridLayout>
 </DockLayout>
