--- a/pray-times-calendar/pray-times-calendar.component.scss
+++ b/pray-times-calendar/pray-times-calendar.component.scss
@@ -1,1 +1,9 @@
 /* Add mobile styles for the component here.  */
+@import "../../../app-variables";
+
+.fab-button {
+  height: 40;
+  width: 40;
+  background-color: $white;
+}
+ 
