Ajustes na exibição dos horários.
Ainda há um pequeno conflito na exibição do por do sol com o horário do
Maghrib.

Os eventos passam a exibir a hora no título para facilitar a
visualização, estou estudando mudar o plugin de calendário, pois este é
muito limitado para minhas projeções para este software.

Foram feitos alguns testes com layout, e nada ainda foi definido quanto
a isso.

A classe de eventos para uso com o calendário foi ampliada para
armazenar mais informações. Como seu tipo.

Foi adicionado uma opção para não exibir eventos astronômicos. Nascer e
Por do Sol, e também meio dia e meia noite.

As configurações foram melhoradas, evitando que SettingsServices venha a
ter milhares de método com o crescimento dos módulos, permitindo assim
que cada módulo possa implementar seu próprio sistema de
SettingsService, veja detalhes no serviço SettingsService

Versão ajustada, e passa a ser exclusivamente número, já que é uma
versão interna e é baseada na data de liberação

Lixo desnecessário foi removido

--- a/pray-times-calendar/pray-times-calendar.component.html
+++ b/pray-times-calendar/pray-times-calendar.component.html
@@ -5,8 +5,9 @@
     </FlexboxLayout>
 
     <GridLayout orientation="vertical" rows="*, auto" height="100%" width="100%" dock="left">
-        <RadCalendar #prayTimesCalendar height="100%" width="100%" 
-        
+    RadCalendar.inlineEventSelectedEvent = "inlineEventSelected";
+    <RadCalendar #prayTimesCalendar
+
             [eventSource]="times"
             
             [eventsViewMode]="eventsViewMode" [viewMode]="viewMode" [minDate]="minDate" 
@@ -15,7 +16,11 @@
             
             (dateSelected)="onDateSelected($event)"
 
+(inlineEventSelected)="onInlineEventSelectedEvent($event)"
+
             [displayedDate]="displayedDate"
+
+            [dayViewStyle]="dayViewStyle" 
             
            >
         </RadCalendar>
